--- a/app/src/main/res/layout/fragment_twopane.xml
+++ b/app/src/main/res/layout/fragment_twopane.xml
@@ -24,7 +24,8 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                  android:orientation="horizontal">
+                  android:orientation="horizontal"
+                  android:layout_marginTop="?attr/actionBarSize">
 
         <FrameLayout
             android:id="@+id/fragment_container"
