--- a/app/src/main/res/menu/menu_quote_save.xml
+++ b/app/src/main/res/menu/menu_quote_save.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <item
-        android:id="@+id/action_edit_quote"
-        android:title="@string/action_edit_quote"
+        android:id="@+id/action_save_quote"
+        android:title="@string/action_save_quote"
         app:showAsAction="ifRoom" />
 </menu>
